web and cli layout fixes
